//
// Created by fengxuegt on 2026/3/17.
//

#ifndef SCENE_H
#define SCENE_H
#include <object.h>


class Scene : public Object{
public:
    Scene();
    ~Scene();
public:

};



#endif //SCENE_H
