//
// Created by fengxuegt on 2026/3/16.
//

#ifndef AMBIENTLIGHT_H
#define AMBIENTLIGHT_H

#include "light.h"

class AmbientLight : public Light{
public:
    AmbientLight();
    ~AmbientLight();
public:


};



#endif //AMBIENTLIGHT_H
